Resolve merge conflicts Optimise merged code and deduplicate Update documentation